feat: create frist MySQL exercise

--- a/PrimoEsercizioMySQL/index.html
+++ b/PrimoEsercizioMySQL/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div>
-            <a href="">Prima funzionalità</a>
-            <a href="">Seconda Funzionalità</a>
+            <a href="./filtroRappresentanti.html">Prima funzionalità</a>
+            <a href="./aumentoPuntiProvvigione.html">Seconda Funzionalità</a>
         </div>
     </body>
 </html>
