feat: crete desing

--- a/PrimoEsercizioMySQL/index.html
+++ b/PrimoEsercizioMySQL/index.html
@@ -9,9 +9,23 @@
         <title>Home page gestione dei rappresentanti</title>
     </head>
     <body>
-        <div>
-            <a href="./filtroRappresentanti.html">Prima funzionalità</a>
-            <a href="./aumentoPuntiProvvigione.html">Seconda Funzionalità</a>
+        <div class="pageContainer">
+            <div class="sideBar">
+                <div class="header"></div>
+                <div class="linksContainer">
+                    <div class="link">
+                        <a href="./filtroRappresentanti.html"
+                            >Prima funzionalità</a
+                        >
+                    </div>
+                    <div class="link">
+                        <a href="./aumentoPuntiProvvigione.html"
+                            >Seconda Funzionalità</a
+                        >
+                    </div>
+                </div>
+            </div>
+            <div class="mainContent"></div>
         </div>
     </body>
 </html>
