feat: create the second feature of the homework

--- a/PrimoEsercizioMySQL/index.html
+++ b/PrimoEsercizioMySQL/index.html
@@ -14,13 +14,13 @@
                 <div class="header"></div>
                 <div class="linksContainer">
                     <div class="link">
-                        <a href="./filtroRappresentanti.html"
-                            >Prima funzionalità</a
+                        <a href="./filtroRappresentanti/"
+                            >Filtro Rappresentanti (prima funzionalità)</a
                         >
                     </div>
                     <div class="link">
-                        <a href="./aumentoPuntiProvvigione.html"
-                            >Seconda Funzionalità</a
+                        <a href="./aumentoPuntiProvvigione/"
+                            >Aumenta punti provvigione (seconda funzionalità)</a
                         >
                     </div>
                 </div>
