--- a/PrimoEsercizioMySQL/filtroRappresentanti/index.html
+++ b/PrimoEsercizioMySQL/filtroRappresentanti/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Funzionalità 1 - Filtro Rappresentanti</title>
 
-        <link rel="stylesheet" href="./style/style.css" />
+        <link rel="stylesheet" href="../style/style.css" />
     </head>
     <body>
         <div class="formContainer">
@@ -33,7 +33,7 @@
             </form>
         </div>
         <div>
-            <a href="./index.html">Home page</a>
+            <a href="../index.html">Home page</a>
         </div>
     </body>
 </html>
