feat: create home page desing

--- a/PrimoEsercizioMySQL/index.html
+++ b/PrimoEsercizioMySQL/index.html
@@ -13,19 +13,32 @@
             <div class="sideBar">
                 <div class="header"></div>
                 <div class="linksContainer">
-                    <div class="link">
-                        <a href="./filtroRappresentanti/"
-                            >Filtro Rappresentanti (prima funzionalità)</a
-                        >
-                    </div>
-                    <div class="link">
-                        <a href="./aumentoPuntiProvvigione/"
-                            >Aumenta punti provvigione (seconda funzionalità)</a
-                        >
-                    </div>
+                    <a class="link" href="./">
+                        <div>Home</div>
+                    </a>
+                    <a class="link" href="./filtroRappresentanti/">
+                        <div>Filtro Rappresentanti</div>
+                    </a>
+                    <a class="link" href="./aumentoPuntiProvvigione/">
+                        <div>Provvigione</div>
+                    </a>
+                    <a class="link" href="./aumentoPuntiProvvigione/">
+                        <div>Funzionalità 3</div>
+                    </a>
+                    <a class="link" href="./aumentoPuntiProvvigione/">
+                        <div>Funzionalità 4</div>
+                    </a>
+                    <a class="link" href="./aumentoPuntiProvvigione/">
+                        <div>Funzionalità 5</div>
+                    </a>
                 </div>
             </div>
-            <div class="mainContent"></div>
+            <div class="mainContent">
+                <div>Ciao</div>
+                <div>Ciao</div>
+                <div>Ciao</div>
+                <div>Ciao</div>
+            </div>
         </div>
     </body>
 </html>
