feat: create the 3 new features

--- a/PrimoEsercizioMySQL/index.html
+++ b/PrimoEsercizioMySQL/index.html
@@ -1,10 +1,3 @@
-<?php
-
-declare(strict_types=1);
-
-function load_main_content() {}
-?>
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -39,18 +32,22 @@ function load_main_content() {}
                     <a class="link" href="./aumentoPuntiProvvigione/">
                         <div>Provvigione</div>
                     </a>
-                    <a class="link" href="./aumentoPuntiProvvigione/">
-                        <div>Funzionalità 3</div>
+                    <a class="link" href="./aggiungiRappresentante/">
+                        <div>Aggiungi rappresentante</div>
                     </a>
-                    <a class="link" href="./aumentoPuntiProvvigione/">
-                        <div>Funzionalità 4</div>
+                    <a class="link" href="./eliminaRappresentante/">
+                        <div>Elimina Rappresentante</div>
                     </a>
-                    <a class="link" href="./aumentoPuntiProvvigione/">
-                        <div>Funzionalità 5</div>
+                    <a class="link" href="./visualizzaRappresentanti/">
+                        <div>Visualizza Rappresentanti</div>
                     </a>
                 </div>
             </div>
-            <div class="mainContent"></div>
+            <div class="mainContent">
+                <div class="centerContent">
+                    <h1>Home page</h1>
+                </div>
+            </div>
         </div>
     </body>
 </html>
