fix: lateral menu path link

--- a/PrimoEsercizioMySQL/filtroRappresentanti/index.html
+++ b/PrimoEsercizioMySQL/filtroRappresentanti/index.html
@@ -36,7 +36,7 @@
                     <a class="link" href="../eliminaRappresentante/">
                         <div>Elimina Rappresentante</div>
                     </a>
-                    <a class="link" href="../visualizzaTabella/">
+                    <a class="link" href="../visualizzaRappresentanti/">
                         <div>Visualizza Rappresentanti</div>
                     </a>
                 </div>
