--- a/PrimoEsercizioMySQL/index.html
+++ b/PrimoEsercizioMySQL/index.html
@@ -44,8 +44,56 @@
                 </div>
             </div>
             <div class="mainContent">
-                <div class="centerContent">
-                    <h1>Home page</h1>
+                <div class="centerContent column">
+                    <h1>Gestione Rappresentanti Commerciali</h1>
+                    <div class="welcomeDescription">
+                        <p>
+                            Benvenuto nel sistema di gestione dei rappresentanti
+                            commerciali. Questa applicazione ti permette di:
+                        </p>
+                        <div class="featureList">
+                            <div class="feature">
+                                <h3>Filtro Rappresentanti</h3>
+                                <p>
+                                    Cerca e filtra i tuoi rappresentanti
+                                    commerciali in base a criteri specifici.
+                                </p>
+                            </div>
+                            <div class="feature">
+                                <h3>Gestione Provvigioni</h3>
+                                <p>
+                                    Aumenta automaticamente i punti provvigione
+                                    per rappresentanti con alte prestazioni in
+                                    specifiche regioni.
+                                </p>
+                            </div>
+                            <div class="feature">
+                                <h3>Aggiungi Rappresentante</h3>
+                                <p>
+                                    Inserisci nuovi rappresentanti nel sistema
+                                    con tutti i dettagli necessari.
+                                </p>
+                            </div>
+                            <div class="feature">
+                                <h3>Elimina Rappresentante</h3>
+                                <p>
+                                    Rimuovi rappresentanti dal database quando
+                                    non sono più attivi.
+                                </p>
+                            </div>
+                            <div class="feature">
+                                <h3>Visualizza Rappresentanti</h3>
+                                <p>
+                                    Ottieni una panoramica completa di tutti i
+                                    tuoi rappresentanti commerciali.
+                                </p>
+                            </div>
+                        </div>
+                        <p class="welcomeNote">
+                            Seleziona una funzionalità dal menu laterale per
+                            iniziare.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
